// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Footer Show Footer 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <footer
      className="makeStyles-footer-1"
    >
      <div
        className="MuiContainer-root MuiContainer-maxWidthLg"
      >
        <p
          className="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
        >
          Copyright (c) 2019 nekochans
        </p>
      </div>
    </footer>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots HeaderImage Show Header Image With Props 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="MuiPaper-root MuiPaper-elevation1 makeStyles-mainHeader-39 makeStyles-mainHeader-42 MuiPaper-rounded"
    >
      <div
        className="makeStyles-overlay-40"
      />
      <div
        className="MuiGrid-root MuiGrid-container"
      >
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-md-4"
        >
          <div
            className="makeStyles-mainHeaderContent-41"
          >
            <h1
              className="MuiTypography-root MuiTypography-h3 MuiTypography-colorInherit MuiTypography-gutterBottom"
            >
              nekochans
            </h1>
            <p
              className="MuiTypography-root MuiTypography-h4 MuiTypography-colorInherit MuiTypography-paragraph"
            >
              We are a Freelance Web Engineer Organization.
            </p>
            <a
              className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-subtitle1 MuiTypography-colorPrimary"
              href="https://github.com/nekochans"
              onBlur={[Function]}
              onFocus={[Function]}
            >
              https://github.com/nekochans
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots HeaderToolbar Show Header Toolbar With Props 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <nav
      className="MuiToolbar-root MuiToolbar-dense makeStyles-toolbarSecondary-211 MuiToolbar-gutters"
    >
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-toolbarLink-212 MuiTypography-body2 MuiTypography-colorInherit MuiTypography-noWrap"
        href="https://www.google.com"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        Google
      </a>
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-toolbarLink-212 MuiTypography-body2 MuiTypography-colorInherit MuiTypography-noWrap"
        href="https://qiita.com"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        Qiita
      </a>
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-toolbarLink-212 MuiTypography-body2 MuiTypography-colorInherit MuiTypography-noWrap"
        href="https://github.com"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        GitHub
      </a>
    </nav>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Loading Show Loading 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="makeStyles-progress-254"
    >
      <div
        className="MuiCircularProgress-root makeStyles-progressContent-253 MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
        role="progressbar"
        style={
          Object {
            "height": 40,
            "width": 40,
          }
        }
      >
        <svg
          className="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx={44}
            cy={44}
            fill="none"
            r={20.2}
            strokeWidth={3.6}
            style={Object {}}
          />
        </svg>
      </div>
      <p>
        Now Loading...
      </p>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots MembersCardList Show Members Card List With Props 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
      >
        <div
          className="MuiPaper-root MuiPaper-elevation1 makeStyles-paper-271 MuiPaper-rounded"
        >
          Members
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root makeStyles-mainGrid-267 MuiGrid-container MuiGrid-spacing-xs-4"
    >
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
      >
        <a
          aria-disabled={false}
          className="MuiButtonBase-root MuiCardActionArea-root"
          href="https://github.com/keitakn/cv"
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
        >
          <div
            className="MuiPaper-root MuiPaper-elevation1 MuiCard-root makeStyles-card-268 MuiPaper-rounded"
          >
            <div
              className="makeStyles-cardDetails-269"
            >
              <div
                className="MuiCardContent-root"
              >
                <h2
                  className="MuiTypography-root MuiTypography-h5"
                >
                  keitakn
                </h2>
              </div>
            </div>
          </div>
          <span
            className="MuiCardActionArea-focusHighlight"
          />
          <span
            className="MuiTouchRipple-root"
          />
        </a>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
      >
        <a
          aria-disabled={false}
          className="MuiButtonBase-root MuiCardActionArea-root"
          href="https://github.com/kobayashi-m42/cv"
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
        >
          <div
            className="MuiPaper-root MuiPaper-elevation1 MuiCard-root makeStyles-card-268 MuiPaper-rounded"
          >
            <div
              className="makeStyles-cardDetails-269"
            >
              <div
                className="MuiCardContent-root"
              >
                <h2
                  className="MuiTypography-root MuiTypography-h5"
                >
                  kobayashi-m42
                </h2>
              </div>
            </div>
          </div>
          <span
            className="MuiCardActionArea-focusHighlight"
          />
          <span
            className="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;
